[package]
name = "bulk-ecobee-thermostat-control"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
home = "0.5.5"
ureq = { version = "2.6.2", features = ["json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"