[package]
name = "bulk-ecobee-thermostat-control"
version = "0.3.2"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
chrono = "0.4.26"
home = "0.5.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = "0.12.1"
time = "0.3.24"
ureq = { version = "2.6.2", features = ["json", "charset"] }

